* Fake slots should be less finicky, however item filters are no longer 'fake' you must place each one in the convert, you can't place filters inside filters.
* Blink distance per level increased to 16 blocks, you no longer need to be above a certain level to use it any time
* Air Pumps will now only 'work' when they receive power, they will only extract fluid at that point too

== Mariculture 1.2.0d ==
* Gas is a little more dangerous
* Fixed Blocks > Ingots Recipes
* Fixed NEIBase crash
* Oysters should no longer be royally screwed if you right click them with sand
* Manta Ray is now Sting Ray + Pufferfish (This is to fix Dragonfish being tier 6 instead of 7)
* Glowfish is now Netherfish + Koi, in order to keep it at the same tier with the manta ray change
* Manpowered turbines can only be activated for 60 Second bursts, or you'll start taking damage, you need to wait 1.5 seconds for it to cool off

== Mariculture 1.2.0c ==
* Fixed Autonomous Activator Being able to activate anvil/manpowered turbine
* Now only registering NEI Handlers if the relevant module is enabled
* Added config option(in other.cfg), that hides my living mariculture fish
* Added stupidity check for fluids in NEI Handler
* Turbines will now transfer their energy without a rotor, they only need it to generate power

== Mariculture 1.2.0b ==
* Should have fixed the NEI Fuels for the the Crucible Furnace messing up every now and then
* Fixed right clicking entities crash
* Fixed right click + ctrl on enchants
* Obsidian takes 15 seconds to make in a Vat now
* Mariculture will now crash like other mods do with an ID Conflict, rather than the obscure crash it had before

== Mariculture 1.2.0a for Minecraft v1.6.X==
* Added Config option that allows you to force kelp/coral in other world types
* Limestone will no longer replace a block if a water material such as kelp/coral is above it (unless it is actually water).

== Mariculture 1.2.0 for Minecraft v1.6.X==
====New====