@@ -1,18 +1,22 @@
 package mariculture;
 
 import java.io.File;
+import java.util.Arrays;
+
+import com.google.common.eventbus.EventBus;
 
 import mariculture.api.core.MaricultureTab;
 import mariculture.core.CommonProxy;
 import mariculture.core.Config;
 import mariculture.core.RecipesSmelting;
-import mariculture.core.handlers.LogHandler;
 import mariculture.core.lib.Modules;
 import mariculture.core.network.PacketPipeline;
-import mariculture.core.network.Packets;
 import mariculture.plugins.Plugins;
 import mariculture.plugins.compatibility.Compat;
+import cpw.mods.fml.common.DummyModContainer;
+import cpw.mods.fml.common.LoadController;
 import cpw.mods.fml.common.Mod;
+import cpw.mods.fml.common.ModMetadata;
 import cpw.mods.fml.common.SidedProxy;
 import cpw.mods.fml.common.event.FMLInitializationEvent;
 import cpw.mods.fml.common.event.FMLPostInitializationEvent;
